--- a/scss/utilities/_components.scss
+++ b/scss/utilities/_components.scss
@@ -51,7 +51,7 @@
 	}
 }
 
-.hide {
+.hide-loader {
 	opacity: 0;
 	visibility: hidden;
 }
